# WebTrackerPOC

./: .gitignore  Account.hs  AuthSession.hs  AuthSessionHelpers.hs  Consumption.hs  DBHelpers.hs  DBTypes.hs  Endpoints.hs  Main.hs  README.md  ScottyHelpers.hs  UUIDHelpers.hs  package.yaml  poc-cabal  poc.cabal  poc_project.cabal  schema.pgsql  stack.yaml  unpinned.nix
DBTypes/: Account.hs  AuthSession.hs  Consumption.hs
